# scoundrel

./: .gitignore  Cargo.toml  README.md
.nsight/scoundrel/: scoundrel.ngfx-proj
data/: config.ron  example.rascal  prelude.rascal
data/presentations/: 8x8glyphs.ron
resources/data/: config.ron  default.rascal  example.rascal  move.rascal  prelude.rascal  sokoban.rascal  tutorial.rascal
resources/data/presentations/: classic_roguelike_white.ron
scoundrel/: Cargo.toml  prelude.rasc
scoundrel-common/: Cargo.toml
scoundrel-common/src/: colors.rs  engine.rs  engine_context.rs  engine_options.rs  glyphs.rs  keycodes.rs  lib.rs  point.rs  presentation.rs  readonly_archive_cave.rs  shared_data.rs  thread_safety.rs
scoundrel-common/src/ecs/: grammar.pest  mod.rs  parser.rs  world.rs
scoundrel-common/src/rascal/: geometry.rs  grammar.pest  interpreter.rs  mod.rs  parser.rs  semantics.rs  value_stack.rs  vm.rs  world.rs
scoundrel-core/: Cargo.toml
scoundrel-core/src/: core_logic.rs  engine.rs  engine_options.rs  glyphs.rs  keycodes.rs  lib.rs  readonly_archive_cave.rs
scoundrel-core/src/rascal/: commits.rs  geometry.rs  interpreter.rs  parser.rs  world.rs
scoundrel-macro/: .gitignore  Cargo.toml
scoundrel-macro/src/: lib.rs
scoundrel-windowing/: Cargo.toml
scoundrel-windowing/src/: attribute.rs  colors.rs  common.rs  fragment_shader.glsl  gamepad.rs  gl_state.rs  glyph_renderer.rs  glyphs.rs  lib.rs  render_options.rs  shader_pipeline.rs  texture.rs  uniforms.rs  vertex_shader.glsl  windowing.rs
scoundrel/src/: main.rs
src/: lib.rs
src/core/: colors.rs  engine.rs  engine_options.rs  flow.rs  glyphs.rs  helpers.rs  input.rs  keycodes.rs  mod.rs  point.rs  presentation.rs  readonly_archive_cave.rs  time.rs
src/core/cache/: config.ron
src/core/rascal/: commits.rs  geometry.rs  grammar.pest  interpreter.rs  mod.rs  parser.rs  world.rs
src/core/world/: common.rs  contains.rs  destroy.rs  entity_collection.rs  insert.rs  mod.rs  query.rs  unique.rs
src/gameplay/: mod.rs  sight.rs  spatial.rs  tags.rs
src/graphics/: attribute.rs  glyph_renderer.rs  mod.rs  texture.rs  types.rs  uniforms.rs  window.rs
src/map/: corridors.rs  domain.rs  field.rs  fov.rs  graphs.rs  map.rs  mod.rs  shadow_casting.rs  stencil.rs  types.rs
src/map/graph_internals/: mod.rs
src/rand/: mod.rs
src/windowing/: attribute.rs  gamepad.rs  glyph_renderer.rs  mod.rs  texture.rs  uniforms.rs  window.rs  windowing.rs
