[package]
name = "scoundrel"
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An engine for working with ASCII roguelikes."
homepage = "http://rusty-rogues.com"
repository = "http://github.com/gavrilovmiroslav/scoundrel"

[lib]
crate-type = ["dylib"]
bench = false

[dependencies]
scoundrel-macro = "0.4.0"
structopt = "0.3.26"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
fastrand = "1.7.0"
shipyard = "0.5.0"
lazy_static = "1.4.0"
multimap = "0.8.3"
notify = "4.0.0"
priority-queue = "1.2.1"
caves = "0.2.1"
filearco = "0.1.0"
bresenham = "0.1.1"
glutin = { version = "0.20", features = ["serde"] }
gl = "0.14.0"
nalgebra-glm = "0.16.0"
image = "0.23"
libc = "0.2.124"
gilrs = "0.8.2"
petgraph = "0.6.0"