[package]
name = "scoundrel-macro"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An engine for working with ASCII roguelikes. This is just the macro package, use `scoundrel` instead!"
homepage = "http://rusty-rogues.com"
repository = "http://github.com/gavrilovmiroslav/scoundrel"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.92"
quote = "1.0.18"